fix: nav tape color optimization in dark mode

--- a/source/css/_partials/_layout/header.styl
+++ b/source/css/_partials/_layout/header.styl
@@ -190,7 +190,7 @@ body::before {
 .brand-nav-group a:hover {
   color: var(--color-accent-strong);
   background-color: var(--color-accent-soft);
-  background-image: var(--tape-stripes);
+  background-image: var(--nav-tape-stripes);
   border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
   transform: scale(1.02) rotate(-1deg);
 }
@@ -255,7 +255,7 @@ body::before {
   height: 14px;
   border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
   background-color: var(--color-accent-soft);
-  background-image: var(--tape-stripes);
+  background-image: var(--nav-tape-stripes);
   opacity: 0;
   z-index: -1;
   transform: scaleX(0.36) rotate(-2deg);
@@ -331,7 +331,7 @@ body::before {
 .site-nav-menu a.active {
   color: var(--color-accent-strong);
   background-color: var(--color-accent-soft);
-  background-image: var(--tape-stripes);
+  background-image: var(--nav-tape-stripes);
   border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
   transform: scale(1.02) rotate(-1deg);
 }
